[gd_scene load_steps=2 format=3 uid="uid://cgvpqxpxhse7d"]

[ext_resource type="Script" uid="uid://ba2lrk72v27a1" path="res://scenes/prefabs/ChatMessage.gd" id="1"]

[node name="ChatMessage" type="HBoxContainer"]
script = ExtResource("1")

[node name="TimestampLabel" type="Label" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "12:34"

[node name="SenderLabel" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
text = "Player:"

[node name="MessageLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Message text"
autowrap_mode = 3
